# school

./: .gitignore  README.md  index.html  main.css  update_draft_list.py
.github/workflows/: compile-ps.yaml  update-draft-list.yaml
cs/: README.md
cs/intro_to_oop/: settings.gradle
cs/intro_to_oop/task_1/: build.gradle
cs/misc/: .gitignore  macros.rpn  rpn.py  sort.py
cs/misc/JavaSorter/: build.gradle
cs/misc/sorters/: README.md
cs/project_euler/: 1.jl  1.py  13.py  16.py  19.py  2.py  20.py  3.py  4.py  5.py  6.py  7.jl  8.py  9.py
cs/project_euler/10/: Cargo.toml
cs/project_euler/11/: Cargo.toml
cs/project_euler/12/: Cargo.toml
cs/t1/2021-10-13/: q1.py  q2.py
cs/t1/challenges/: mastermind.py
cs/t1/lmc/: multiply.asm
cs/t2/exercises/: dec_to_binary.py  prime_factors.py  question_marks.py  simplify_fraction.py  validate_username.py
fm/: README.md
fm/d1/: bin_packing.ipynb
fm/d1/graphs/: library.py  simple_test.py  (+1 more)
fm/d1/simplex/: Cargo.toml  justfile
fm/d1/simplex/src/: main.rs
fm/d1/simplex/src/lin_prog/: comparison.rs  config.rs  constraint.rs  expression.rs  mod.rs  system.rs
fm/d1/simplex/src/lin_prog/expression/: mod.rs
fm/d1/simplex/src/lin_prog/expression/const_expression/: mod.rs
fm/d1/simplex/src/lin_prog/expression/simple_expression/: mod.rs  parse.rs
fm/d1/simplex/src/simplex/: mod.rs  tableau.rs  tests.rs
fm/d1/simplex/src/simplex/tableau/: labels.rs  mod.rs
fm/d1/simplex/src/simplex/tests/: mod.rs  one_stage.rs  two_stage.rs
ps/: .gitignore  NAG.fods  README.md  create-xlsx.sh  main.tex  notes.md
(+46 files in other folders)
