[package]
name = "simplex"
version = "0.1.0"
edition = "2021"
description = "This program exists to solve linear programming problems using the simplex algorithm."
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]

[dependencies]
color-eyre = "0.6.2"
inquire = "0.6.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.3"
nom-regex = "0.2.0"
ouroboros = "0.15.6"
regex = "1.7.2"
tabled = "0.10.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
